# QQbot-Twip-v2

./: .env.dev  .env.prod  .gitignore  ID_DATA.db  ID_DATA.db-shm  ID_DATA.db-wal  ID_DATA_BAK_2022_27_Aug.db  README.html  README.md  bot.py  pyproject.toml  requirements.txt  time.db
LittlePaimon/: __init__.py
Twip/: __init__.py
config/: learning_chat.yml  paimon_config.yml  paimon_greet.yml
config/help合成图yml的备份/: Genshin_AIVoice.yml  Genshin_Calendar.yml  Paimon_Autobbs.yml  Paimon_Bind.yml  Paimon_CloudGenshin.yml  alias_manager.yml  nonebot_plugin_couplets.yml  nonebot_plugin_groupmate_waifu-master.yml  nonebot_plugin_petpet.yml  sdorica_draw.yml  show_speak_rank.yml
config/plugins/: Gacha.yml  Genshin_Voice.yml  Learning_Chat.yml  Paimon_DailyNote.yml  Paimon_Gacha.yml  Paimon_Gacha_Log.yml  Paimon_Info.yml  Paimon_MonthInfo.yml  Paimon_Wiki.yml  bot_status_now.yml  key_word.yml  news60s.yml  nonebot_plugin_couplets.yml  nonebot_plugin_myb_exchange.yml  nonebot_plugin_petpet.yml  sign_new.yml  yuanshen_drow.yml
data/: 魂册.md
data/novelai/: anlas.json
data/petpet/: meme_list.yml
data/setu4/: setu_perm_cfg.json
data/waifu/: record_waifu  record_yinpa1  record_yinpa2
menu_config/: config.json
sql/: message_info.sql  t_bot_admin_cmd_info.sql  t_bot_admin_role_cmd_link_role.sql  t_bot_admin_role_role_info.sql  t_bot_admin_role_role_link_group.sql  t_bot_function_sdorica_draw.sql  t_bot_speaker_answer.sql  t_soul_marry.sql  user_arms.sql  user_buff.sql  user_hp_ak_am_coin.sql  user_info.sql  user_info_new.sql  user_skill.sql
tool/: __init__.py
(+455 files in other folders)
